style.css
header {
  text-align: center;
  margin-block-end: var(--space-xl);
  margin-block-start: 2rem;
}

.hero {
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: center;
}

header .contact {
  margin-inline-end: var(--sidebar-margin-inline-end);
  margin-inline-start: var(--sidebar-margin-inline-start);
  padding-inline: var(--sidebar-padding-inline);
}

header .header-image {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-inline-end: var(--sidebar-margin-inline-end);
  margin-inline-start: var(--sidebar-margin-inline-start);
  align-items: center;
  justify-content: center;
  min-block-size: 100%;
  max-inline-size: var(--sidebar-inline-size);
  padding-inline: var(--sidebar-padding-inline);
}
.header-image img {
  inline-size: 40%;
  margin-block: auto;
}

.header-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-inline: var(--sidebar-padding-inline);
}

.header-text h1 {
  margin-bottom: 0;
  font-size: var(--font-xxl);
}

.header-text h2 {
  margin-top: 0;
  font-size: var(--font-xl);
}

a:visited {
  color: #000;
}

body {
  min-block-size: 100vh;
  max-inline-size: 110rem;
  margin-inline: auto;
  margin-block-end: 0;
  font-size: var(--font-normal);
  font-family: "Inter", serif;
  font-optical-sizing: auto;
  font-weight: normal;
  font-style: normal;
}

main {
  display: flex;
  flex-direction: column;
}

.sidebar {
  padding-block-start: var(--sidebar-padding-block-start);
  min-block-size: var(--sidebar-inline-size);
  padding-inline: var(--sidebar-padding-inline);
  margin-inline-end: var(--sidebar-margin-inline-end);
  min-inline-size: var(--sidebar-inline-size);
  margin-inline-start: var(--sidebar-margin-inline-start);
  border-block-start: solid;
  background-color: var(--light-background);
}
.content {
  padding-block-start: var(--sidebar-padding-block-start);
  padding-inline: var(--sidebar-padding-inline);
}

.resume {
  font-size: var(--font-m);
}

h1,
h2 {
  font-family: "Inter", sans-serif;
}

h1 i {
  font-weight: normal;
}

.content h2 {
  font-size: var(--font-l);
  margin-block-end: 0;
}

h3 {
  margin-inline-start: 2rem;
  margin-block: 0;
  font-size: var(--font-normal);
}

h3 ~ p {
  margin-block-start: 0;
}

p {
  margin-block-start: 0.5rem;
}

.code {
  font-family: "Sono", sans-serif;
  font-weight: 400;
}

.text-primary {
  color: var(--primary-color);
}

.text-bg-primary {
  background-color: var(--primary-color);
  padding-inline: 1rem;
}

.highlight {
  background-color: var(--primary-color);
  font-weight: 600;
}

section {
  margin-block-end: var(--space-xl);
}

.content section {
  margin-block-end: var(--space-xl);
}

.experience {
  font-family: "Inter", sans-serif;
  font-size: var(--font-normal);
  margin-block-start: 2rem;
}

.experience h1 {
  margin-block-end: 0;
  margin-block-start: 0.5rem;
  position: relative;
  font-size: var(--font-l);
}

.experience h1 i {
  font-size: var(--font-normal);
}

.experience h2 {
  position: relative;
  font-size: var(--font-m);
  padding-inline-start: 1rem;
}

.experience p {
  padding-inline-start: 2rem;
}

.experience p:first-of-type {
  padding-inline-start: 0;
}

.sidebar h1 {
  font-size: var(--font-l);
  margin-block: 0.5rem;
}
.sidebar h2 {
  font-size: var(--font-normal);
  margin-block: 0;
}
.sidebar ul {
  margin-block: 0;
}

.date {
  position: absolute;
  inset-inline-start: 0;
  inset-block-start: 0.5rem;
  font-size: var(--font-sm);
  font-family: "Sono", sans-serif;
  font-weight: 500;
  inline-size: 100%;
  text-align: center;
}

.contact {
  text-align: center;
  font-size: var(--font-sm);
  inline-size: var(--sidebar-inline-size);
  padding-inline: var(--sidebar-padding-inline);
  margin-block-start: 1rem;
  margin-block-end: 0;
}

.contact a {
  font-size: var(--font-l);
  text-decoration: none;
  color: #000;
  font-weight: bold;
}

.technologies {
  font-size: var(--font-normal);
  display: flex;
  flex-direction: row;
}
.technologies span {
  background-color: var(--light-background);
}

.technologies h3 {
  padding-inline-end: 0.5rem;
}

/* ------ RESPONSIVE ------ */

body {
  --primary-color: #1eff78;
  --light-background: #f4f4f4;

  --font-xxl: 2.8rem;
  --font-xl: 1.5rem;
  --font-l: 1.5rem;
  --font-m: 1.2rem;
  --font-sm: 1.1rem;
  --font-normal: 1rem;

  --space-xl: 4rem;

  --header-padding-block: 3rem;

  --sidebar-inline-size: auto;
  --sidebar-margin-inline-start: 0;
  --sidebar-margin-inline-end: 0rem;
  --sidebar-padding-inline: 1.5rem;
  --sidebar-padding-block-start: 0.5rem;
}

.experience h1 {
  padding-top: 2rem;
}

@media screen and (min-width: 900px), print {
  body {
    --font-xxl: 4.5rem;
    --font-xl: 2.7rem;
    --font-l: 2rem;
    --font-m: 1.5rem;
    --font-normal: 1rem;

    --sidebar-inline-size: 17rem;
    --sidebar-margin-inline-start: 1rem;
    --sidebar-margin-inline-end: 1rem;
    margin-block-end: 1rem;
  }

  main {
    flex-direction: row-reverse;
  }

  header {
    display: flex;
    flex-direction: column;
    text-align: start;
    justify-content: start;
    align-items: start;
    padding-block-end: var(--header-padding-block);
    margin-block-end: 0;
  }

  .hero {
    justify-content: left;
    flex-direction: row;
  }

  .header-image img {
    inline-size: 100%;
  }

  .sidebar {
    background-color: transparent;
    border: solid;
  }
}

@media screen and (min-width: 1200px) {
  body {
    --font-xxl: 6rem;
    --font-xl: 3.5rem;
    --space-xl: 5rem;
    --sidebar-inline-size: 25rem;
    --sidebar-margin-inline-end: 2rem;
  }
}

@media screen and (min-width: 1800px) {
  body {
    --sidebar-inline-size: 30rem;

    --font-xxl: 6rem;
    --space-xl: 5rem;
    --font-xl: 3.5rem;
    --font-sm: 1.3rem;
  }
}

@media print {
  body {
    --header-padding-block: 1rem;
    --sidebar-margin-inline-start: 0rem;
    --sidebar-margin-inline-end: 0.8rem;
    --sidebar-padding-block-start: 0rem;
    --sidebar-padding-inline: 0.7rem;
    --sidebar-inline-size: 12rem;

    --font-xxl: 2.5rem;
    --font-xl: 1.8rem;
    --font-l: 1.2rem;
    --font-m: 1rem;
    --font-normal: 0.8rem;

    --space-xl: 2.8rem;
  }

  main {
    margin-block-start: 1.5rem;
  }

  .sidebar {
    border-block: none;
    border-inline-start: none;
    padding-inline-start: 0;
    border-inline-end-width: 1px;
    padding-block-end: 0;
  }

  .sidebar section:last-of-type {
    margin-block-end: 0;
  }

  .content {
    padding-inline-end: 0;
  }
  .contact {
    font-size: var(--font-normal);
  }

  section {
    orphans: 4;
    widows: 3;
  }
  h1,
  h2,
  h3,
  h4,
  .date {
    page-break-after: avoid;
    break-after: avoid;
  }

  .technologies h3 {
    page-break-after: auto;
  }

  .technologies {
    margin-block-start: -0.2rem;
  }
}

